# Diss

./: .gitignore  README.md  agent_strat_analysis.py  catan_game_log.csv  env.py  environment.yml  gui.py  input_env.py  play_game.py  pyproject.toml  requirements.txt  test_scenario.py  train_dqnagent.py  train_dqnagent_a100gpu.py
Mini-Catan/: Bank.py  Board.py  Hex.py  Player.py  enums.py  play_test.py  turns.py
analysis/: agent_strat_analysis.py  create_csv.py
catan_agent/: DQNAgent.py  EpsilonAgent.py  GreedyAgent.py  RandomAgent.py  RandomAgentV2.py  __init__.py
full_catan-TBD/: Bank.py  Hex.py  Ruleset.ipynb  enums.py  list_of_objs.txt
mini_catan/: Bank.py  Board.py  CatanEnv.py  Die.py  Hex.py  Player.py  Ruleset.ipynb  __init__.py  enums.py  play_test.py  turns.py
random_agent_games/: randomagent_randomagentv2_game_1.csv  randomagentv2_randomagent_game_1.csv  randomagentv2_randomagent_game_10.csv  randomagentv2_randomagent_game_11.csv  randomagentv2_randomagent_game_12.csv  randomagentv2_randomagent_game_13.csv  randomagentv2_randomagent_game_14.csv  randomagentv2_randomagent_game_15.csv  randomagentv2_randomagent_game_16.csv  randomagentv2_randomagent_game_17.csv  randomagentv2_randomagent_game_18.csv  randomagentv2_randomagent_game_19.csv  randomagentv2_randomagent_game_2.csv  randomagentv2_randomagent_game_20.csv  randomagentv2_randomagent_game_21.csv  randomagentv2_randomagent_game_22.csv  randomagentv2_randomagent_game_23.csv  randomagentv2_randomagent_game_24.csv  randomagentv2_randomagent_game_25.csv  randomagentv2_randomagent_game_26.csv  (+31 more)
(+9509 files in other folders)
